Added few more solutions.